# mcp-server-funasr

./: .gitignore  LICENSE  README.md  README_zh.md  client_batch.py  client_microphone.py  client_realtime.py  client_requests.py  download_models.py  main.py  pyproject.toml  restart_server.bat  restart_server.sh  setup.bat  setup.sh
core/: __init__.py  audio_enhancer.py  batch_transcriber.py  device_utils.py  llm_postprocessor.py  realtime_transcriber.py  streaming_postprocessor.py
